style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Josefin Sans', sans-serif;
}

:root {
    --bg-and-main: hsl(206, 15%, 18%);
    --primary: hsl(202, 51%, 69%);
    --secondary: hsl(45, 46%, 95%);
    --inactive: hsla(206, 16%, 18%, 0.12);
    --error: hsl(8, 76%, 55%);
    --done: hsla(95, 68%, 63%, 1);
    --section: hsl(202, 18%, 21%);
    --btn-hover: hsl(202, 8%, 27%);
    --nav-height: 104px;
    --footer-height: 214px;
}

a {
    text-decoration: none;
    cursor: pointer;
}

body {
    background-color: var(--bg-and-main);
}

button {
    background-color: transparent;
    border: none;
    padding: 0;
    cursor: pointer;
    font: inherit;
}

.content-wrapper {
    max-inline-size: 1920px;
    margin-inline: auto;
    width: 100%;
    position: relative;
}

.content-wrapper {
    padding: 0 72px;
}

.color-lightblue {
    color: var(--primary);
}

.color-dark {
    color: var(--bg-and-main)
}

.color-white {
    color: var(--secondary);
}

.bounce-page {
    animation: bouncePage 0.3s ease-in-out;
    will-change: transform;
}

@keyframes bouncePage {
    0% {
        transform: translateY(0);
    }

    33% {
        transform: translateY(8px);
    }

    66% {
        transform: translateY(-4px);
    }

    100% {
        transform: translateY(0);
    }
}

.scroll-animation-up {
    animation: text-appear both;
    animation-timeline: view();
    animation-range: entry 20% cover 50vh;
}

@keyframes text-appear {
    from {
        opacity: 0;
        transform: translateY(50px);
    }
    to {
        opacity: 1;
        transform: translateY(0);
    }
}

.scroll-animation-reveal {
    animation: reveal both;
    animation-timeline: view();
    animation-range: entry 20% cover 40vh;
}

@keyframes reveal {
    from {
        filter: saturate(0) contrast(4) brightness(0.1) blur(5px);
        opacity: 0;
        scale: 0.95;
        translate: 0 4rem;
    }
    to {
        filter: none;
        opacity: 1;
        scale: 1;
        translate: 0 0;
    }
}

.btn-cta,
.btn-standard {
    border-radius: 30px;
    box-sizing: border-box;
    width: 135px;
    height: 48px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 18px;
    border: 1px solid var(--primary);
}

.btn-cta {
    background-color: var(--primary);
}

.btn-cta {
    color: var(--bg-and-main);
}

.btn-cta:focus-visible {
    background-color: var(--secondary);
    border: 1px solid var(--secondary);
}

.btn-standard {
    color: var(--primary);
}

.btn-standard:focus-visible {
    background-color: var(--btn-hover);
}


/* ------------ HERO section + MOBILE ------------  */
.hero-mobile-top {
    display: none;
    justify-content: space-between;
    align-items: center;
    background-color: var(--bg-and-main);
    height: var(--nav-height);
}

.burger-menu {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 10px;
    cursor: pointer;
    width: 30px;
    height: 30px;
}

.burger-stripe {
    background-color: var(--secondary);
    height: 2px;
    width: 30px;
    transition: 0.4s;
    transform-origin: left;
}

.burger-menu.change .burger-top {
    transform: translate(0, 3px) rotate(45deg);
}

.burger-menu.change .burger-middle {
    opacity: 0;
}

.burger-menu.change .burger-bottom {
    transform: rotate(-45deg);
}

.mobile-link-section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 20px;
    transform: translateX(-12px);
}

.mobile-link-section a {
    font-size: 22px;
}

.mobile-language {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 32px;
    gap: 8px;
}

.language-tab,
.language-mobile-tab {
    position: relative;
    width: 40px;
    height: 32px;
    font-size: 16px;
}

.flip-card {
    display: flex;
    flex: 1;
}

.flip-card-inner {
    position: relative;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    transition: transform 0.6s;
    transform-style: preserve-3d;
}

.flip-card.show .flip-card-inner {
    transform: rotateY(180deg);
}

.hero-height {
    height: calc(100dvh - var(--nav-height));
    position: relative;
}

.hero-layout {
    display: grid;
    grid-template-columns: 1fr 1fr 30px;
    height: 100%;
    color: var(--secondary);
}

.hero-layout-left {
    display: flex;
}

.hero-layout-right {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.hero-image-shape-container-front,
.hero-image-shape-container-back {
    position: absolute;
    display: flex;
    justify-content: center;
    aspect-ratio: 1/1;
    max-height: calc(100dvh - 104px);
    left: 0;
    right: 0;
    bottom: 0;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    text-wrap: nowrap;
}

.hero-image-shape-container-back {
    transform: rotateY(180deg);
}

.hero-image-shape-container-front::before,
.hero-image-shape-container-back::before {
    content: '';
    position: absolute;
    inset: 0;
    background: url('./assets/shapes/hero_shape_1_default.svg') no-repeat bottom center;
    background-size: contain;
    z-index: -1;
    transform-origin: center;
    transition: transform ease-in 125ms;
}

.hero-image-shape-container-back::before {
    transform: scaleX(-1);
}

.hero-image {
    object-fit: cover;
    display: block;
}

.logo-anta,
.hero-h1,
.me-h2 {
    font-family: 'Anta', sans-serif;
}

.hero-h1 {
    font-size: clamp(48px, 4.5vw, 88px);
    padding: 36px 0;
}

.hero-h2 {
    font-size: clamp(24px, 2vw, 40px);
    font-weight: 400;
}

.logo-main,
.hero-logo,
.hero-logo-mobile {
    display: flex;
    flex-direction: column;
    align-items: center;
    color: var(--secondary);
    font-size: 16px;
}

.hero-logo svg path[transform] {
    transition: transform 125ms ease-in-out;
    transform-origin: center;
}

.hero-logo svg {
    overflow: visible;
}

.hero-btn-down {
    margin-top: 36px;
}
/* ... */

